nenolod     2005/10/31 03:38:12 UTC	(20051031-3329)
  Log:
  Missing extern declaration for is_internal_client().
  

  Changes:	Modified:
  +1 -0		trunk/include/extern.h (File Modified) 


nenolod     2005/10/31 03:36:11 UTC	(20051031-3327)
  Log:
  pedanticy fixes
  

  Changes:	Modified:
  +20 -13	trunk/backend/flatfile.c (File Modified) 
  +13 -7	trunk/backend/postgresql.c (File Modified) 


nenolod     2005/10/31 03:27:49 UTC	(20051031-3325)
  Log:
  Code cleanups to claro-base.
  

  Changes:	Modified:
  +1 -2		trunk/libatheme/balloc.c (File Modified) 
  +0 -1		trunk/libatheme/claro.c (File Modified) 
  +0 -1		trunk/libatheme/org.atheme.claro.base (File Modified) 
  +18 -18	trunk/libatheme/sockio.c (File Modified) 
  +1 -1		trunk/libatheme/sockio.h (File Modified) 
  +1 -0		trunk/libatheme/stdinc.h (File Modified) 


nenolod     2005/10/31 03:18:47 UTC	(20051031-3323)
  Log:
  Remove the callback API. We don't use it.
  

  Changes:	Modified:
  +0 -1		trunk/libatheme/Makefile.in (File Modified) 
  +0 -180	trunk/libatheme/callback.c (File Deleted) 
  +0 -34	trunk/libatheme/callback.h (File Deleted) 


jilles      2005/10/31 02:01:47 UTC	(20051031-3321)
  Log:
  In sendq_flush() do not try further chunks if write()
  returns an incomplete or error result.
  

  Changes:	Modified:
  +2 -3		trunk/libatheme/datastream.c (File Modified) 


alambert    2005/10/31 01:27:58 UTC	(20051031-3319)
  Log:
  authcookie_find(): fix typo -- thanks nenolod

  Changes:	Modified:
  +2 -2		trunk/src/authcookie.c (File Modified) 


alambert    2005/10/31 01:16:53 UTC	(20051031-3317)
  Log:
  authcookie_find(): allow locating by *both* myuser and ticket

  Changes:	Modified:
  +19 -4	trunk/src/authcookie.c (File Modified) 


jilles      2005/10/31 01:04:26 UTC	(20051031-3315)
  Log:
  I know count has to go away here.
  

  Changes:	Modified:
  +0 -1		trunk/modules/chanserv/Makefile.win32 (File Modified) 


jilles      2005/10/31 00:55:58 UTC	(20051031-3313)
  Log: