@@ -1,3 +1,13 @@
+nenolod     2005/10/31 03:40:31 UTC	(20051031-3331)
+  Log:
+  Duplicate declaration metadata_t *md in (NS|US)::Verify
+  
+
+  Changes:	Modified:
+  +0 -2		trunk/modules/nickserv/verify.c (File Modified) 
+  +0 -2		trunk/modules/userserv/verify.c (File Modified) 
+
+
 nenolod     2005/10/31 03:38:12 UTC	(20051031-3329)
   Log:
   Missing extern declaration for is_internal_client().
